--- a/src/app/modulos/login/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/modulos/login/iniciar-sesion/iniciar-sesion.component.html
@@ -1,1 +1,60 @@
-<p>iniciar-sesion works!</p>
+
+  <body class="bg-info d-flex justify-content-center align-items-center vh-100 black" >
+    <div
+      class="bg-white p-5 rounded-5 text-secondary shadow"
+      style="width: 35rem"
+    >
+      <div class="d-flex justify-content-center">
+        <img
+          src="../../../../assets/img/logo.png"
+          alt="login-icon"
+          style="height: 7rem"
+        />
+      </div>
+      <form [formGroup]="fGroup" class="login-form">
+        <div class="text-center fs-1 fw-bold hipervinculo2"> AntLeague </div>
+        <div class="input-field col s12">
+          <i class="material-icons prefix">mail_outline</i>
+          <input formControlName="usuario" class="validate" id="email" type="email">
+          <label for="email" data-error="wrong" data-success="right"> Email </label>
+          <div class="show-errors" *ngIf="obtenerFormGroup['usuario'].errors && (obtenerFormGroup ['usuario'].dirty || obtenerFormGroup['usuario'].touched)">
+            <strong>Este campo es obligatorio</strong>
+          </div>
+        </div>
+        <div class="input-field col s12">
+          <i class="material-icons prefix">lock_outline</i>
+          <input formControlName="clave" id="password" type="password">
+          <label for="password"> Contraseña </label>
+          <div class="show-errors" *ngIf="obtenerFormGroup['clave'].errors && (obtenerFormGroup ['clave'].dirty || obtenerFormGroup['clave'].touched)">
+            <strong>Este campo es obligatorio</strong>
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-around mt-1">
+        
+          <div class="pt-1 ">
+            <a routerLink="/login/olvidar-clave"
+              class="hipervinculo"
+              style="font-size: 0.9rem"
+              > ¿Olvidaste tu contraseña? </a
+            >
+          </div>
+        </div>
+        <div class="input-field col s12">
+          
+            <button (click)="IdentificarUsuario()" class="btn btn-info text-white w-100 mt-4 fw-semibold shadow-sm yellow accent-4
+            "> Login </button>
+
+        </div>
+        <div class="d-flex gap-1 justify-content-center mt-1">
+          <div>¿No tienes una cuenta? ¡Qué estás esperando!</div>
+          <a routerLink="/login/registrarse" class="hipervinculo"
+            > Crear cuenta </a>
+        </div>
+        <div class="d-flex gap-1 justify-content-center mt-1">
+          <a routerLink="/inicio" class="hipervinculo"
+            > Volver </a>
+        </div>
+      </form>
+    </div>
+  </body>
