--- a/src/app/modulos/login/olvidar-clave/olvidar-clave.component.html
+++ b/src/app/modulos/login/olvidar-clave/olvidar-clave.component.html
@@ -1,1 +1,40 @@
-<p>olvidar-clave works!</p>
+<body class="bg-info d-flex justify-content-center align-items-center vh-100 black">
+    <div
+      class="bg-white p-5 rounded-5 text-secondary shadow zindex"
+      style="width: 45rem"
+    >
+    
+        <div class="d-flex justify-content-center"class="d-flex justify-content-center"> 
+          
+          <img
+            src="../../../../assets/img/logo.png"
+            alt="login-icon"
+            style="height: 7rem"
+          />
+         
+        </div>
+        <div class="text-center fs-3 fw-bold hipervinculo2">
+          ¿Olvidaste tu contraseña? No te preocupes, ¡nosotros te ayudaremos!
+        </div>
+        <form>
+          <p class="d-flex justify-content-center"> Por favor escribe tu correo para enviarte un enlace de verifacón</p>
+  
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate">
+              <label for="email"> Correo </label>
+            </div>
+      <div>
+        <button class="btn btn-info text-white w-100  fw-semibold shadow-sm yellow accent-4
+      "> Enviar </button>
+      </div>
+      <div class="d-flex gap-1 justify-content-center mt-4">
+        <a routerLink="/inicio" class="hipervinculo"
+          > Volver </a>
+      </div>
+    </div>
+          </form>
+          </div>
+  </body>
+    
+  
