--- a/src/app/modulos/login/registrarse/registrarse.component.html
+++ b/src/app/modulos/login/registrarse/registrarse.component.html
@@ -1,1 +1,79 @@
-<p>registrarse works!</p>
+
+<body class="bg-info d-flex justify-content-center align-items-center vh-100 black" >
+    <div
+      class="bg-white p-5 rounded-5 text-secondary shadow zindex"
+      style="width: 45rem"
+    >
+    
+        <div class="d-flex justify-content-center"> 
+          
+          <img
+            src="../../../../assets/img/logo.png"
+            alt="login-icon"
+            style="height: 7rem"
+          />
+         
+        </div>
+        <div class="text-center fs-3 fw-bold hipervinculo2">
+          Crear cuenta
+        </div>
+        <form>
+
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="first_name" type="text" class="validate">
+              <label for="first_name"> Nombre </label>
+            </div>
+            <div class="input-field col s12">
+              <input id="last_name" type="text" class="validate">
+              <label for="last_name"> Apellido </label>
+            </div>
+          </div>
+  
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate">
+              <label for="email"> Correo </label>
+            </div>
+            <div class="input-field col s12">
+              <input id="email2" type="email" class="validate">
+              <label for="email2"> Confirmar Correo </label>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field col s12">
+              <input formControlName="clave" id="password" type="password">
+              <label for="password"> Contraseña </label>
+            </div>
+            <div class="input-field col s12">
+                <input formControlName="clave" id="password2" type="password">
+                <label for="password2"> Confirmar Contraseña </label>
+            </div>
+          </div>
+
+
+          
+          <div>  
+            <label>
+              <input type="checkbox" class="filled-in" checked="checked" />
+              <span> Acepto los términos y condiciones </span>
+            </label>
+          </div>
+         
+      </form>
+      <div>
+        <button class="btn btn-info text-white w-100  fw-semibold shadow-sm yellow accent-4
+      "> Crear cuenta</button>
+      </div>
+      <div class="d-flex gap-1 justify-content-center mt-4">
+        <a routerLink="/inicio" class="hipervinculo"
+          > Volver </a>
+      </div>
+    </div>
+    
+  </body>
+  <script>
+    M.AutoInit();
+
+  </script>
