--- a/src/app/modulos/login/verificacion-codigo/verificacion-codigo.component.html
+++ b/src/app/modulos/login/verificacion-codigo/verificacion-codigo.component.html
@@ -1,1 +1,34 @@
-<p>verificacion-codigo works!</p>
+<body class="bg-info d-flex justify-content-center align-items-center vh-100 black" >
+    <div
+      class="bg-white p-5 rounded-5 text-secondary shadow"
+      style="width: 35rem"
+    >
+      <div class="d-flex justify-content-center">
+        <img
+          src="../../../../assets/img/logo.png"
+          alt="login-icon"
+          style="height: 7rem"
+        />
+      </div>
+      <form class="login-form">
+        <div class="text-center fs-1 fw-bold hipervinculo2"> AntLeague </div>
+        <div class="input-field col s12">
+          <i class="material-icons prefix">mail_outline</i>
+          <input formControlName="usuario" class="validate" id="email" type="email">
+          <label for="email" data-error="wrong" data-success="right"> Email </label>
+        </div>
+        
+        <div class="input-field col s12">
+          
+            <button class="btn btn-info text-white w-100 mt-4 fw-semibold shadow-sm yellow accent-4
+            "> Validar datos </button>
+
+        </div>
+        
+        <div class="d-flex gap-1 justify-content-center mt-1">
+          <a routerLink="/inicio" class="hipervinculo"
+            > Volver </a>
+        </div>
+      </form>
+    </div>
+  </body>
