--- a/src/app/modulos/login/iniciar-sesion/iniciar-sesion.component.css
+++ b/src/app/modulos/login/iniciar-sesion/iniciar-sesion.component.css
@@ -26,4 +26,10 @@
    color: #1b5e20;
    font-weight: bold;
 }
+.cuerpo {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: black;
+}
 
