--- a/src/app/modulos/login/registrarse/registrarse.component.html
+++ b/src/app/modulos/login/registrarse/registrarse.component.html
@@ -1,11 +1,11 @@
 
-<body class="bg-info d-flex justify-content-center align-items-center vh-100 black" >
+<body class="cuerpo">
     <div
       class="bg-white p-5 rounded-5 text-secondary shadow zindex"
       style="width: 45rem"
     >
     
-        <div class="d-flex justify-content-center"> 
+        <div class="container text-center"> 
           
           <img
             src="../../../../assets/img/logo.png"
@@ -19,53 +19,55 @@
         </div>
         <form>
 
+        <div class="row">
+            <div class="col">
+              <label> Nombre</label>
+              <input class="form-control" type="text" aria-label="default input example">
+            </div>
+            <div class="col">
+              <label> Apellido</label>
+              <input class="form-control" type="text" aria-label="default input example">
+            </div>
+          </div>    
           <div class="row">
-            <div class="input-field col s12">
-              <input id="first_name" type="text" class="validate">
-              <label for="first_name"> Nombre </label>
-            </div>
-            <div class="input-field col s12">
-              <input id="last_name" type="text" class="validate">
-              <label for="last_name"> Apellido </label>
-            </div>
+              <div class="col">
+                <label for="exampleFormControlInput1" class="form-label">Email</label>
+              <input formControlName="usuario" type="email" class="form-control" placeholder="name@example.com">
+              </div>
+              <div class="col">
+                <label for="exampleFormControlInput1" class="form-label">Confirmar Email</label>
+                <input formControlName="usuario" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
           </div>
+            
+          
   
           <div class="row">
-            <div class="input-field col s12">
-              <input id="email" type="email" class="validate">
-              <label for="email"> Correo </label>
+            <div class="col">
+              <label for="inputPassword5" class="form-label">Contraseña</label>
+          <input formControlName="clave" type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
             </div>
-            <div class="input-field col s12">
-              <input id="email2" type="email" class="validate">
-              <label for="email2"> Confirmar Correo </label>
-            </div>
+            <div class="col">
+              <label for="inputPassword5" class="form-label">Confirmar contraseña</label>
+              <input formControlName="clave" type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+          </div>
           </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input formControlName="clave" id="password" type="password">
-              <label for="password"> Contraseña </label>
-            </div>
-            <div class="input-field col s12">
-                <input formControlName="clave" id="password2" type="password">
-                <label for="password2"> Confirmar Contraseña </label>
-            </div>
-          </div>
-
-
-          
-          <div>  
-            <label>
-              <input type="checkbox" class="filled-in" checked="checked" />
-              <span> Acepto los términos y condiciones </span>
+          <div class="form-check" style="width: fit-content; margin-left: auto; margin-right: auto;">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Acepto los términos y condiciones
             </label>
           </div>
-         
       </form>
+      
       <div>
-        <button class="btn btn-info text-white w-100  fw-semibold shadow-sm yellow accent-4
-      "> Crear cuenta</button>
+        <div style="display: flex; justify-content: center;">
+          <button type="button" class="btn btn-warning">Registrarse</button>
+        </div>
+
       </div>
+
       <div class="d-flex gap-1 justify-content-center mt-4">
         <a routerLink="/inicio" class="hipervinculo"
           > Volver </a>
